# bionitio-c

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  README.md  bionitio.cwl  configure.ac
.travis/: install-dependencies.sh  unit-test.sh
readme_includes/: help.md  install.md  log.md  unit-tests.md
src/: Makefile.am  bionitio.c  fasta.c  fasta.h  log.c  log.h  test.c
